[package]
name = "pingora_example"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
num_cpus = "1.17.0"
pingora = "0.6.0"
pingora-core = "0.6.0"
pingora-proxy = "0.6.0"
reqwest = { version = "0.12.23", features = ["blocking"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "signal", "fs", "io-util"] }
